--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
  <html>
  <head><title>My Exam</title></head> d. <body>Exam stuff</body>
+<script src=”script/js/jq.js”></script>
+<script src=”script/js/myjs.js”></script>
 </html>
